fix: show a scrollbar.

--- a/section-10/useforja/src/index.css
+++ b/section-10/useforja/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --color-primary: #5d569c;
+  --color-primary: #868200;
   --color-primary-light: #343a40;
   --color-text: #dee2e6;
   --color-text-dark: #adb5bd;
@@ -55,7 +55,9 @@ body {
   background-color: var(--color-background-500);
   border-radius: 0.9rem;
   position: relative;
-  overflow: hidden;
+  overflow-y: scroll;
+  scrollbar-color: var(--color-background-500) var(--color-primary);
+  scrollbar-width: thin;
 }
 
 .loader {
